--- a/style.css
+++ b/style.css
@@ -7,7 +7,7 @@ body{
     align-items: stretch;
     width: 100vw;
     height: 100vh;
-    
+    font-family:'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif;
 }
 /***********left side of site*********/
 .leftside{
@@ -56,5 +56,52 @@ body{
 }
 /**************right side of site*********/
 .rigthside{
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
     width: 70%;
+    height: 100%;
+}
+.top{
+    font-weight: 550;
+    font-size: 20px;
+    margin: 3vh;
+}
+form {
+
+}
+.inputs{
+    display: flex;
+    justify-content: space-around;
+    flex-wrap: wrap;
+    max-width: calc(2*200px + 50px);
+}
+.inputs > div{
+    display: flex;
+    flex-direction: column;
+    width: 200px;
+    margin: 3px;
+
+}
+.inputs label{
+    font-size: 10px;
+    font-weight:400;
+}
+.inputs input{
+    height: 20px;
+    padding: 1px 5px;
+    font-size: 12px;
+
+    border: 1px solid #E5E7EB;
+    border-radius: 3px;
+}
+.inputs input:focus{
+    outline: none;
+    border: 1px solid blue;
+    box-shadow: 3px 3px 2px rgb(0, 0, 255, 0.2);
+}
+.bottom{
+    display: flex;
+    flex-direction: column;
+    max-width: 300px;
 }
