--- a/style.css
+++ b/style.css
@@ -67,12 +67,14 @@ body{
     font-size: 20px;
     margin: 3vh;
 }
-form {
-
+.middle{
+    padding: 30px;
+    box-shadow: 3px 3px 2px rgb(0, 0, 255, 0.2);
+    margin: 0;
 }
 .inputs{
     display: flex;
-    justify-content: space-around;
+    justify-content: space-between;
     flex-wrap: wrap;
     max-width: calc(2*200px + 50px);
 }
@@ -80,8 +82,7 @@ form {
     display: flex;
     flex-direction: column;
     width: 200px;
-    margin: 3px;
-
+    margin: 3px 0;
 }
 .inputs label{
     font-size: 10px;
@@ -100,8 +101,49 @@ form {
     border: 1px solid blue;
     box-shadow: 3px 3px 2px rgb(0, 0, 255, 0.2);
 }
+/***** password ********/
+input[type="password"]+span{
+    position: relative;
+}
+.password input:invalid, .confirmpassword input:invalid{
+    outline: none;
+    border: 1px solid red;
+    box-shadow: none;
+}
+input[type="password"]:invalid+span::after {
+    content: "* Passwords do not match";
+    color: red;
+    font-size: 10px;
+    position: absolute;
+    bottom: -13px;
+    left: 1px;
+}
+/*********** submit button *******/
 .bottom{
     display: flex;
     flex-direction: column;
     max-width: 300px;
+    font-size: small;
+    margin: 30px 0px 0px 30px;
+}
+.bottom button{
+    border: none;
+    background-color: rgb(35 43 71);
+    color: #E5E7EB;
+    font-weight: 800;
+    border-radius: 5px;
+    width: 150px;
+    height: 35px;
+    margin: 0px 0px 20px 0px;
+}
+.bottom button:hover{
+    box-shadow: 3px 3px 2px rgb(0, 0, 255, 0.2);
+}
+.bottom span{
+    font-size: smaller;
+}
+.bottom a,.bottom a:visited, .bottom a:hover{
+    text-decoration: none;
+    color: rgb(35 43 71);
+    font-weight: 900;
 }
